--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,6 @@
     <string name="weekly_monthly_planner">Weekly/ Monthly planner</string>
     <string name="bucket_list">Bucket list</string>
     <string name="reading_list">Reading list</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
